<resources>
    <string name="app_name">Joy\'n Us!</string>
    <string name="login_email">Votre e-mail:</string>
    <string name="login_password">Mot de passe:</string>
    <string name="login_identify">Identifiez-vous!</string>
    <string name="login_create_account">Créer un compte</string>
    <string name="login_go">Joy\'n Us!</string>
    <string name="login_username_and_password_missing">Veuillez renseigner un login et un mot de passe!</string>
    <string name="create_account_first_name">Prénom</string>
    <string name="create_account_last_name">Nom</string>
    <string name="create_account_birth_date">Date de naissance</string>
    <string name="create_account_email">Adresse mail</string>
    <string name="create_account_password">Mot de passe</string>
    <string name="create_account_confirm_password">Confirmez le mot de passe</string>
    <string name="go_back">Retour</string>
    <string name="select_date">Sélectionnez une date</string>
    <string name="register_error_first_name_length">Erreur : la longueur de votre prénom doit se situer entre 2 et 100 caractères.</string>
    <string name="register_error_first_name_required">Erreur : Votre Prénom est requis</string>
    <string name="register_error_first_name_composition">Erreur: votre prénom ne peut être composé que de lettres, d\'espaces et de traits d'union.</string>
    <string name="register_error_first_name_two_letters">Erreur: votre prénom doit contenir deux lettres au minimum</string>
    <string name="register_error_last_name_required">Erreur : Votre nom de famille est requis</string>
    <string name="register_error_last_name_length">Erreur : la longueur de votre nom de famille doit se situer entre 2 et 100 caractères.</string>
    <string name="register_error_last_name_composition">Erreur: votre nom de famille ne peut être composé que de lettres, d\'espaces et de traits d'union.</string>
    <string name="register_error_last_name_two_letters">Erreur: votre nom de famille doit contenir deux lettres au minimum</string>
    <string name="register_error_password_required">Erreur : Votre mot de passe est requis</string>
    <string name="register_error_password_length">Erreur : La longueur de votre mot de passe doit impérativement se situer entre 6 et 100 caractères.</string>
    <string name="register_error_password_digit">Erreur: votre mot de passe doit contenir au moins un chiffre.</string>
    <string name="register_error_password_special_character">Erreur: votre mot de passe doit contenir au moins un caractère spécial.</string>
    <string name="register_error_password_capital_letter">Erreur: votre mot de passe doit contenir au moins une majuscule.</string>
    <string name="register_error_password_small_letter">Erreur: votre mot de passe doit contenir au moins une minuscule.</string>
    <string name="register_error_confirm_password_required">Erreur : la confirmation de mot de passe est requise.</string>
    <string name="register_error_confirm_password_not_same">Erreur : le mot de passe et la confirmation de mot de passe doivent être identiques.</string>
    <string name="register_error_email_required">Erreur : votre e-mail est requis</string>
    <string name="register_error_email_not_valid">Erreur : l\'adresse e-mail que vous avez rentrée n\'est pas valide</string>
    <string name="register_error_birthdate_in_future">Erreur : la date de naissance que vous avez rentrée est dans le futur!</string>
    <string name="register_error_birthdate_too_young">Erreur : vous devez être agé de 12 ans au minimum pour pouvoir utiliser l\'application</string>
    <string name="register_succeeded">Inscription réussie!</string>
    <string name="register_processing">Envoi du formulaire, veuillez patienter</string>
    <string name="register_user_already_existing">Il semble que l\' e-mail que vous avez rentré soit déjà utilisé par un utilisateur de l'application.</string>

    <string name="error_no_internet">"Il semble que vous ne soyez pas connecté à internet. Veuillez vérifier votre connexion à internet"</string>
    <string name="error_authentication">Session perdue. Veuillez relancer l\'application et réessayer de vous connecter.</string>
    <string name="error_unidentified">Une erreur de transmission s\'est produite. Vérifiez votre connection a internet ou essayez de relancer l'application.</string>
    <string name="error_not_found">L\'élément sur lequel vous avez cliqué est introuvable.</string>

    <string name="authentication_failed">Echec de l\'authentification.</string>
    <string name="error_username_or_password">Mauvaise combinaison utilisateur/mot de passe!</string>
    <string name="register_task_failed">Echec de l\'inscription!</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="go_to_profile">Consulter votre profil</string>
    <string name="create_an_event">Créer un évènemenent</string>
    <string name="search_for_events">Chercher des évènements</string>
    <string name="profile_edit_interests">Editer vos intérêts</string>
    <string name="profile_created_events">Evènements créés</string>
    <string name="profile_participating_events">Participations</string>
    <string name="profile_no_events_found">Aucun évènement trouvé</string>

    <string name="interest_study">Etude</string>
    <string name="interest_videogames">Jeux vidéo</string>
    <string name="interest_languages">Langues</string>
    <string name="interest_sports">Sports</string>
    <string name="interest_dinner">Dîner</string>
    <string name="interest_party">Soirées</string>
    <string name="interest_culture">Culture</string>
    <string name="interest_music">Musique</string>
    <string name="interest_boardgames">Jeux de société</string>
    <string name="interest_other">Autres</string>

    <string name="edit_interest_success">Intérêts édités avec succès!</string>
    <string name="edit_interest_failure">Echec de l\'édition des intérêts.</string>

    <string name="search_event_radius">Rayon en km:</string>
    <string name="search_event_categories_filter">Filtre de catégories</string>
    <string name="search_event_help">Si aucune catégorie n\'est sélectionnée, aucun filtre ne sera appliqué. Le bouton ci-dessous permet de placer sur une carte l\'endroit à partir duquel vous voulez scanner.</string>
    <string name="search_event_define_scan_center">Localiser le centre de scan</string>
    <string name="search_event_launch_scan">Lancer la recherche</string>
    <string name="search_event_no_center_selected">Veuillez localiser le centre de scan sur la carte</string>
    <string name="search_event_no_radius_selected">Veuillez sélectionner un rayon de scan</string>
    <string name="search_event_no_event_found">Aucun évènement trouvé</string>
    <string name="search_event_warning_location_necessary">Attention: il faut que vous localisiez le centre de scan pour pouvoir lancer la recherche.</string>

    <string name="event_list_detail">Détails de l\'évènement</string>
    <string name="event_list_no_selected_event">Veuillez d\'abord sélectionner un évènement avant d\'appuyer sur le bouton</string>
    <string name="event_list_event_removed">L\'évènement a été supprimé, mais plein d\'autres évènements géniaux n\'attendent que vous!</string>


    <string name="event_description_see_map">Voir sur la carte</string>
    <string name="event_description_facebook_event">Evènement Facebook</string>
    <string name="event_description_creator_profile">Profil du créateur</string>
    <string name="event_description_delete_event">Supprimer l\'évènement</string>
    <string name="event_description_subscribe">S\'inscrire</string>
    <string name="event_description_unsubscribe">Se désinscrire</string>
    <string name="event_description_created_by">Créé par</string>
    <string name="event_description_person_participating">personne(s) participe(nt) </string>
    <string name="event_description_no_facebook_event">Il n\'existe pas d\'évènement Facebook associé à cet évènement</string>
    <string name="event_description_event_deleted_successfully">Suppression de l\'évènement réussie</string>

    <string name="create_event_title">Titre</string>
    <string name="create_event_place">Lieu</string>
    <string name="create_event_locate">Localisez!</string>
    <string name="create_event_date">Date</string>
    <string name="create_event_hour">Heure</string>
    <string name="create_event_description">Description</string>
    <string name="create_event_facebook_link">Lien Facebook</string>
    <string name="create_event_address_check">Vérification d\'adresse</string>
    <string name="create_event_no_address">Pas d\'adresse</string>
    <string name="create_event_create_event">Créer l\'évènement</string>

    <string name="create_event_error_title_length">Erreur : le titre de votre évènement doit faire plus de 4 caractères et moins de 80 caractères</string>
    <string name="create_event_error_not_located">Erreur : votre évènement n\'est pas géolocalisé</string>
    <string name="create_event_error_past_date">Erreur : la date et l\'heure d\'organisation de votre évènement sont dans le passé</string>
    <string name="create_event_error_future_date">Erreur: la date que vous avez spécifiée est trop loin dans le futur</string>
    <string name="create_event_error_description_length">Erreur : la description doit faire plus de 10 caractères et moins de 1500</string>
    <string name="create_event_error_no_category">Erreur : Veuillez cocher une catégorie au minimum.</string>
    <string name="create_event_error_bad_facebook_link">Erreur: l\'URL facebook renseignée n\'est pas valide.</string>
    <string name="create_event_warning_not_located">Attention: localiser votre évènement est nécessaire pour pouvoir le créer.</string>
    <string name="create_event_success">Evènement créé avec succès</string>

    <string name="locate_event_error_no_location_selected">Veuillez appuyer à un endroit de la carte pour y définir la position de votre évènement</string>
    <string name="locate_event_no_address">Pas d\'adresse</string>
</resources>
