<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SearchEventLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.nicol.joynus.SearchEventActivity">
        <LinearLayout
            android:id="@+id/SearchEventRadiusField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/joynusPaleBlue"
            >
            <TextView
                android:id="@+id/SearchEventRadiusTextView"
                android:text="@string/search_event_radius"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                />
            <SeekBar
                android:id="@+id/SearchEventRadiusSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:max="50"
                android:progress="25"
                android:gravity="center"
                android:layout_marginTop="15dp"
                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/SearchEventCategoriesLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/SearchEventCategoriesTextView"
                android:text="@string/search_event_categories_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="20sp"
                />
            <GridView
                android:id="@+id/SearchEventCategoriesGridView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:columnWidth="90dp"
                android:numColumns="3"
                android:verticalSpacing="10dp"
                android:horizontalSpacing="10dp"
                android:stretchMode="columnWidth"
                android:gravity="center"/>
        </LinearLayout>

        <TextView
            android:id="@+id/SearchEventHelpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/joynusPaleBlue"
            android:text="@string/search_event_help"
            android:textSize="20sp"
            />
        <Button
            android:id="@+id/SearchEventLocateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/joynusBlue"
            android:textColor="@color/joynusGold"
            android:textSize="15sp"
            android:text="@string/search_event_define_scan_center"
            android:layout_margin="15dp"
            android:layout_gravity="center"/>
    <Button
        android:id="@+id/SearchEventLaunchSearchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/joynusBlue"
        android:textColor="@color/joynusGold"
        android:textSize="15sp"
        android:text="@string/search_event_launch_scan"
        android:layout_margin="15dp"
        android:layout_gravity="center"/>

</LinearLayout>
