<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/CreateEventLayout"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/CreateEventNameField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/joynusPaleBlue">
        <TextView
            android:id="@+id/CreateEventTitleTextView"
            android:text="@string/create_event_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="20sp"
            />
        <EditText
            android:id="@+id/CreateEventTitleInput"
            android:inputType="text"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="80dp">
        <LinearLayout
            android:id="@+id/CreateEventDescriptionField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/CreateEventDescriptionTextView"
                android:text="@string/create_event_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="20sp"
                />
            <EditText
                android:id="@+id/CreateEventDescriptionInput"
                android:inputType="textMultiLine"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                />
        </LinearLayout>

    </ScrollView>
    <LinearLayout
        android:id="@+id/CreateEventFacebookLinkField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/joynusPaleBlue">
        <TextView
            android:id="@+id/CreateEventFacebookLinkTextView"
            android:text="@string/create_event_facebook_link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="20sp"
            />
        <EditText
            android:id="@+id/CreateEventFacebookLinkInput"
            android:inputType="text"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/CreateEventDateField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/CreateEventDateTextView"
            android:text="@string/create_event_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="20sp"
            />
        <EditText
            android:id="@+id/CreateEventDateInput"
            android:inputType="date"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/CreateEventHourField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/joynusPaleBlue">
        <TextView
            android:id="@+id/CreateEventHourTextView"
            android:text="@string/create_event_hour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="20sp"
            />
        <EditText
            android:id="@+id/CreateEventHourInput"
            android:inputType="time"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/CreateEventPlaceField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/CreateEventPlaceTextView"
            android:text="@string/create_event_place"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="20sp"
            />
        <Button
            android:id="@+id/CreateEventPlaceInput"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/joynusGold"
            android:background="@color/joynusBlue"
            android:text="@string/create_event_locate"
            />
    </LinearLayout>
    <GridView
        android:id="@+id/CreateEventCategoriesGridView"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:columnWidth="90dp"
        android:numColumns="3"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:stretchMode="columnWidth"
        android:gravity="center"
        android:background="@color/joynusPaleBlue"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="50dp">
    <LinearLayout
        android:id="@+id/CreateEventAddressCheckField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/CreateEventAddressCheckTextView"
            android:text="@string/create_event_address_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/CreateEventAddressCheckFromParent"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/create_event_address_check"
            />
    </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/CreateEventCreateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@color/joynusGold"
        android:background="@color/joynusBlue"
        android:text="@string/create_event_create_event"
        android:textSize="20sp"

        />

</LinearLayout>