<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/LoginScrollView"
android:layout_width="fill_parent"
android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/RegisterLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/RegisterFirstNameField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#B0ECF0">
            <TextView
                android:id="@+id/RegisterFirstNameTextView"
                android:text="@string/create_account_first_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="20sp"
            />
            <EditText
                android:id="@+id/RegisterFirstNameInput"
                android:inputType="text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/RegisterLastNameField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/RegisterLastNameTextView"
                android:text="@string/create_account_last_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="20sp"
                />
            <EditText
                android:id="@+id/RegisterLastNameInput"
                android:inputType="text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/RegisterBirthDateField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#B0ECF0">
            <TextView
                android:id="@+id/RegisterBirthDateTextView"
                android:text="@string/create_account_birth_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="20sp"
                />
            <EditText
                android:id="@+id/RegisterBirthDateInput"
                android:inputType="date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/RegisterEmailField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/RegisterEmailTextView"
                android:text="@string/create_account_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="20sp"
                />
            <EditText
                android:id="@+id/RegisterEmailInput"
                android:inputType="textEmailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/RegisterPasswordField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#B0ECF0">
            <TextView
                android:id="@+id/RegisterPasswordTextView"
                android:text="@string/create_account_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="20sp"
                />
            <EditText
                android:id="@+id/RegisterPasswordInput"
                android:inputType="textPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/RegisterConfirmPasswordField"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/RegisterConfirmPasswordTextView"
                android:text="@string/create_account_confirm_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="20sp"
                />
            <EditText
                android:id="@+id/RegisterConfirmPasswordInput"
                android:inputType="textPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/RegisterButtonsBar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#B0ECF0">
            <Button
                android:id="@+id/RegisterGoBackButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/go_back"
                android:background="#4884B8"
                android:textColor="#FFD800"

                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                style="?android:attr/borderlessButtonStyle"
                />

            <Button
                android:id="@+id/RegisterCreateAccountButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/login_create_account"
                android:gravity="center"
                android:background="#4884B8"
                android:textColor="#FFD800"
                style="?android:attr/borderlessButtonStyle"
                />

        </LinearLayout>
    </LinearLayout>
</ScrollView>